Новый класс и интерфейс для редактора настроек карты

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -223,6 +223,7 @@
     <DCCReference Include="i_MapLayerGridsConfig.pas" />
     <DCCReference Include="i_MapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_MapMovingConfig.pas" />
+    <DCCReference Include="i_MapTypeConfigModalEdit.pas" />
     <DCCReference Include="i_MapTypeGUIConfig.pas" />
     <DCCReference Include="i_MapTypeGUIConfigList.pas" />
     <DCCReference Include="i_MapTypeHotKeyListStatic.pas" />
@@ -606,6 +607,7 @@
     <DCCReference Include="u_MapType.pas" />
     <DCCReference Include="u_MapTypeBasic.pas" />
     <DCCReference Include="u_MapTypeCacheConfig.pas" />
+    <DCCReference Include="u_MapTypeConfigModalEditByForm.pas" />
     <DCCReference Include="u_MapTypeGUIConfig.pas" />
     <DCCReference Include="u_MapTypeGUIConfigList.pas" />
     <DCCReference Include="u_MapTypeGUIConfigStatic.pas" />
