--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -698,6 +698,7 @@
     <DCCReference Include="u_SensorViewListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorViewTextTBXPanel.pas" />
     <DCCReference Include="u_ShortcutManager.pas" />
+    <DCCReference Include="u_ShortCutModalEditByForm.pas" />
     <DCCReference Include="u_ShortCutSingleConfig.pas" />
     <DCCReference Include="u_SimpleTileStorageConfig.pas" />
     <DCCReference Include="u_SimpleTileStorageConfigStatic.pas" />
