--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -561,6 +561,7 @@
     <DCCReference Include="u_ImportMpSimple.pas" />
     <DCCReference Include="u_InetConfig.pas" />
     <DCCReference Include="u_InetConfigStatic.pas" />
+    <DCCReference Include="u_InetFunc.pas" />
     <DCCReference Include="u_InterfacedThread.pas" />
     <DCCReference Include="u_InternalDomainInfoProviderByMapTypeList.pas" />
     <DCCReference Include="u_InternalDomainInfoProviderList.pas" />
