--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -633,7 +633,7 @@
     <DCCReference Include="u_MapTypesMainList.pas" />
     <DCCReference Include="u_MapVersionConfig.pas" />
     <DCCReference Include="u_MapVersionInfo.pas" />
-    <DCCReference Include="u_MapViewGotoOnFMain.pas" />
+    <DCCReference Include="u_MapViewGoto.pas" />
     <DCCReference Include="u_MapViewPortState.pas" />
     <DCCReference Include="u_MapZoomingConfig.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
