--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -321,6 +321,7 @@
     <DCCReference Include="i_TileIterator.pas" />
     <DCCReference Include="i_TileObjCache.pas" />
     <DCCReference Include="i_TilePostDownloadCropConfig.pas" />
+    <DCCReference Include="i_TileRectUpdateNotifier.pas" />
     <DCCReference Include="i_TileRequest.pas" />
     <DCCReference Include="i_TileRequestBuilder.pas" />
     <DCCReference Include="i_TileRequestBuilderConfig.pas" />
@@ -761,6 +762,7 @@
     <DCCReference Include="u_TileIteratorSpiralByRect.pas" />
     <DCCReference Include="u_TileIteratorStuped.pas" />
     <DCCReference Include="u_TilePostDownloadCropConfigStatic.pas" />
+    <DCCReference Include="u_TileRectUpdateNotifier.pas" />
     <DCCReference Include="u_TileRequest.pas" />
     <DCCReference Include="u_TileRequestBuilder.pas" />
     <DCCReference Include="u_TileRequestBuilderConfig.pas" />
