Ковыряю связанное с качалкой

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -210,6 +210,7 @@
     <DCCReference Include="i_InternalDomainInfoProvider.pas" />
     <DCCReference Include="i_InternalPerformanceCounter.pas" />
     <DCCReference Include="i_InvisibleBrowser.pas" />
+    <DCCReference Include="i_ITileRequestProcessorPool.pas" />
     <DCCReference Include="i_JclListenerNotifierLinksList.pas" />
     <DCCReference Include="i_KeyMovingConfig.pas" />
     <DCCReference Include="i_KmlLayerConfig.pas" />
@@ -305,6 +306,7 @@
     <DCCReference Include="i_TileDownloader.pas" />
     <DCCReference Include="i_TileDownloaderAsync.pas" />
     <DCCReference Include="i_TileDownloaderConfig.pas" />
+    <DCCReference Include="i_TileDownloaderList.pas" />
     <DCCReference Include="i_TileDownloadRequest.pas" />
     <DCCReference Include="i_TileDownloadRequestBuilder.pas" />
     <DCCReference Include="i_TileDownloadRequestBuilderConfig.pas" />
@@ -318,6 +320,7 @@
     <DCCReference Include="i_TilePostDownloadCropConfig.pas" />
     <DCCReference Include="i_TileRectUpdateNotifier.pas" />
     <DCCReference Include="i_TileRequest.pas" />
+    <DCCReference Include="i_TileRequestQueue.pas" />
     <DCCReference Include="i_TileRequestResult.pas" />
     <DCCReference Include="i_TileStorage.pas" />
     <DCCReference Include="i_TileStorageConfig.pas" />
@@ -727,7 +730,6 @@
     <DCCReference Include="u_StringConfigDataElementWithLanguage.pas" />
     <DCCReference Include="u_StringHistory.pas" />
     <DCCReference Include="u_TBXSubmenuItemWithIndicator.pas" />
-    <DCCReference Include="u_TileDownloaderAsyncByThread.pas" />
     <DCCReference Include="u_TileDownloaderBaseCore.pas" />
     <DCCReference Include="u_TileDownloaderBaseThread.pas" />
     <DCCReference Include="u_TileDownloaderConfig.pas" />
@@ -736,11 +738,13 @@
     <DCCReference Include="u_TileDownloaderFrontEnd.pas" />
     <DCCReference Include="u_TileDownloaderHttp.pas" />
     <DCCReference Include="u_TileDownloaderHttpWithTTL.pas" />
-    <DCCReference Include="u_TileDownloaderPoolItem.pas" />
+    <DCCReference Include="u_TileDownloaderList.pas" />
+    <DCCReference Include="u_TileDownloaderListStatic.pas" />
     <DCCReference Include="u_TileDownloaderSimple.pas" />
     <DCCReference Include="u_TileDownloaderThread.pas" />
     <DCCReference Include="u_TileDownloaderUI.pas" />
     <DCCReference Include="u_TileDownloaderUIOneTile.pas" />
+    <DCCReference Include="u_TileDownloaderWithQueue.pas" />
     <DCCReference Include="u_TileDownloadRequest.pas" />
     <DCCReference Include="u_TileDownloadRequestBuilder.pas" />
     <DCCReference Include="u_TileDownloadRequestBuilderConfig.pas" />
@@ -763,6 +767,9 @@
     <DCCReference Include="u_TileRectUpdateNotifier.pas" />
     <DCCReference Include="u_TileRequest.pas" />
     <DCCReference Include="u_TileRequestBuilderHelpers.pas" />
+    <DCCReference Include="u_TileRequestProcessorPool.pas" />
+    <DCCReference Include="u_TileRequestQueue.pas" />
+    <DCCReference Include="u_TileRequestQueueProcessorThread.pas" />
     <DCCReference Include="u_TileRequestResult.pas" />
     <DCCReference Include="u_TileStorageAbstract.pas" />
     <DCCReference Include="u_TileStorageFileSystem.pas" />
