--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -787,6 +787,8 @@
     <DCCReference Include="u_TreeChangeableBase.pas" />
     <DCCReference Include="u_TTLCheckListener.pas" />
     <DCCReference Include="u_TTLCheckNotifier.pas" />
+    <DCCReference Include="u_UiTileDownload.pas" />
+    <DCCReference Include="u_UITileDownloadList.pas" />
     <DCCReference Include="u_UsedMarksConfig.pas" />
     <DCCReference Include="u_UsedMarksConfigStatic.pas" />
     <DCCReference Include="u_UserInterfaceItemBase.pas" />
