--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -298,17 +298,23 @@
     <DCCReference Include="i_StatBarConfig.pas" />
     <DCCReference Include="i_StaticTreeBuilder.pas" />
     <DCCReference Include="i_StaticTreeItem.pas" />
+    <DCCReference Include="i_StorageState.pas" />
+    <DCCReference Include="i_StorageStateInternal.pas" />
+    <DCCReference Include="i_StorageTypeAbilities.pas" />
     <DCCReference Include="i_StringByLanguage.pas" />
     <DCCReference Include="i_StringConfigDataElement.pas" />
     <DCCReference Include="i_StringHistory.pas" />
     <DCCReference Include="i_Thread.pas" />
     <DCCReference Include="i_TileDownloadChecker.pas" />
-    <DCCReference Include="i_TileDownloaderAsync.pas" />
+    <DCCReference Include="i_TileDownloader.pas" />
     <DCCReference Include="i_TileDownloaderConfig.pas" />
     <DCCReference Include="i_TileDownloaderList.pas" />
+    <DCCReference Include="i_TileDownloaderState.pas" />
     <DCCReference Include="i_TileDownloadRequest.pas" />
     <DCCReference Include="i_TileDownloadRequestBuilder.pas" />
     <DCCReference Include="i_TileDownloadRequestBuilderConfig.pas" />
+    <DCCReference Include="i_TileDownloadRequestBuilderFactory.pas" />
+    <DCCReference Include="i_TileDownloadSubsystem.pas" />
     <DCCReference Include="i_TileError.pas" />
     <DCCReference Include="i_TileErrorLogProviedrStuped.pas" />
     <DCCReference Include="i_TileFileNameGenerator.pas" />
@@ -326,7 +332,6 @@
     <DCCReference Include="i_TileStorageInfo.pas" />
     <DCCReference Include="i_TileStorageType.pas" />
     <DCCReference Include="i_TileStorageTypeConfig.pas" />
-    <DCCReference Include="i_TileStorageTypeInfo.pas" />
     <DCCReference Include="i_TileStorageTypeList.pas" />
     <DCCReference Include="i_TileStorageTypeListItem.pas" />
     <DCCReference Include="i_TrackWriter.pas" />
@@ -725,6 +730,8 @@
     <DCCReference Include="u_StatBarConfig.pas" />
     <DCCReference Include="u_StaticTreeBuilderBase.pas" />
     <DCCReference Include="u_StaticTreeItem.pas" />
+    <DCCReference Include="u_StorageStateInternal.pas" />
+    <DCCReference Include="u_StorageStateStatic.pas" />
     <DCCReference Include="u_StringByLanguageWithStaticList.pas" />
     <DCCReference Include="u_StringConfigDataElementWithDefByStringRec.pas" />
     <DCCReference Include="u_StringConfigDataElementWithLanguage.pas" />
@@ -737,12 +744,16 @@
     <DCCReference Include="u_TileDownloaderList.pas" />
     <DCCReference Include="u_TileDownloaderListStatic.pas" />
     <DCCReference Include="u_TileDownloaderSimple.pas" />
+    <DCCReference Include="u_TileDownloaderStateInternal.pas" />
+    <DCCReference Include="u_TileDownloaderStateStatic.pas" />
     <DCCReference Include="u_TileDownloaderUIOneTile.pas" />
     <DCCReference Include="u_TileDownloaderWithQueue.pas" />
     <DCCReference Include="u_TileDownloadRequest.pas" />
     <DCCReference Include="u_TileDownloadRequestBuilder.pas" />
     <DCCReference Include="u_TileDownloadRequestBuilderConfig.pas" />
+    <DCCReference Include="u_TileDownloadRequestBuilderFactoryPascalScript.pas" />
     <DCCReference Include="u_TileDownloadRequestBuilderPascalScript.pas" />
+    <DCCReference Include="u_TileDownloadSubsystem.pas" />
     <DCCReference Include="u_TileErrorInfo.pas" />
     <DCCReference Include="u_TileErrorLogProviedrStuped.pas" />
     <DCCReference Include="u_TileFileNameES.pas" />
@@ -769,9 +780,9 @@
     <DCCReference Include="u_TileStorageFileSystem.pas" />
     <DCCReference Include="u_TileStorageGE.pas" />
     <DCCReference Include="u_TileStorageInfo.pas" />
+    <DCCReference Include="u_TileStorageTypeAbilities.pas" />
     <DCCReference Include="u_TileStorageTypeBase.pas" />
     <DCCReference Include="u_TileStorageTypeConfig.pas" />
-    <DCCReference Include="u_TileStorageTypeInfo.pas" />
     <DCCReference Include="u_TileStorageTypeList.pas" />
     <DCCReference Include="u_TileStorageTypeListItem.pas" />
     <DCCReference Include="u_TileStorageTypeListSimple.pas" />
