--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -335,6 +335,8 @@
     <DCCReference Include="i_TileStorageTypeConfig.pas" />
     <DCCReference Include="i_TileStorageTypeList.pas" />
     <DCCReference Include="i_TileStorageTypeListItem.pas" />
+    <DCCReference Include="i_TimeZoneDiffByLonLat.pas" />
+    <DCCReference Include="i_TimeZoneList.pas" />
     <DCCReference Include="i_TrackWriter.pas" />
     <DCCReference Include="i_TreeChangeable.pas" />
     <DCCReference Include="i_TTLCheckListener.pas" />
@@ -790,6 +792,7 @@
     <DCCReference Include="u_TileStorageTypeList.pas" />
     <DCCReference Include="u_TileStorageTypeListItem.pas" />
     <DCCReference Include="u_TileStorageTypeListSimple.pas" />
+    <DCCReference Include="u_TimeZoneDiffByLonLatStuped.pas" />
     <DCCReference Include="u_TimeZones.pas" />
     <DCCReference Include="u_TreeByMapActiveMapsSet.pas" />
     <DCCReference Include="u_TreeByPathDetalizeProviderList.pas" />
