--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -295,6 +295,7 @@
     <DCCReference Include="i_ShortCutModalEdit.pas" />
     <DCCReference Include="i_ShortCutSingleConfig.pas" />
     <DCCReference Include="i_SimpleFactory.pas" />
+    <DCCReference Include="i_SimpleHttpDownloader.pas" />
     <DCCReference Include="i_SimpleTileStorageConfig.pas" />
     <DCCReference Include="i_StartUpLogoConfig.pas" />
     <DCCReference Include="i_StatBarConfig.pas" />
@@ -525,6 +526,7 @@
     <DCCReference Include="u_DownloaderHttp.pas" />
     <DCCReference Include="u_DownloaderHttpWithTTL.pas" />
     <DCCReference Include="u_DownloadInfoSimple.pas" />
+    <DCCReference Include="u_DownloadRequest.pas" />
     <DCCReference Include="u_DownloadResult.pas" />
     <DCCReference Include="u_DownloadResultFactory.pas" />
     <DCCReference Include="u_DownloadResultTextProvider.pas" />
@@ -730,6 +732,7 @@
     <DCCReference Include="u_ShortcutManager.pas" />
     <DCCReference Include="u_ShortCutModalEditByForm.pas" />
     <DCCReference Include="u_ShortCutSingleConfig.pas" />
+    <DCCReference Include="u_SimpleHttpDownloader.pas" />
     <DCCReference Include="u_SimpleTileStorageConfig.pas" />
     <DCCReference Include="u_SimpleTileStorageConfigStatic.pas" />
     <DCCReference Include="u_StartUpLogoConfig.pas" />
