Класс для построения поточечно линий

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -175,6 +175,7 @@
     <DCCReference Include="i_CoordConverterFactory.pas" />
     <DCCReference Include="i_Datum.pas" />
     <DCCReference Include="i_DebugInfoWindow.pas" />
+    <DCCReference Include="i_DoublePointsAggregator.pas" />
     <DCCReference Include="i_DownloadChecker.pas" />
     <DCCReference Include="i_Downloader.pas" />
     <DCCReference Include="i_DownloadInfoSimple.pas" />
@@ -523,6 +524,7 @@
     <DCCReference Include="u_CoordConverterSimpleLonLat.pas" />
     <DCCReference Include="u_Datum.pas" />
     <DCCReference Include="u_DebugInfoWindow.pas" />
+    <DCCReference Include="u_DoublePointsAggregator.pas" />
     <DCCReference Include="u_DownloadCheckerStuped.pas" />
     <DCCReference Include="u_DownloaderFaked.pas" />
     <DCCReference Include="u_DownloaderHttp.pas" />
