Еще пару итераторов с фильтрами

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -537,7 +537,9 @@
     <DCCReference Include="u_DownloadUIConfig.pas" />
     <DCCReference Include="u_EcwDllSimple.pas" />
     <DCCReference Include="u_ECWWrite.pas" />
+    <DCCReference Include="u_EnumDoublePointClosePoly.pas" />
     <DCCReference Include="u_EnumDoublePointFilterEqual.pas" />
+    <DCCReference Include="u_EnumDoublePointFilterFirstPoly.pas" />
     <DCCReference Include="u_EnumDoublePointLonLatToMapPixel.pas" />
     <DCCReference Include="u_EnumDoublePointMapPixelToLocalPixel.pas" />
     <DCCReference Include="u_EnumDoublePointsByArray.pas" />
