--- a/Test/SASPlanetTests.dproj
+++ b/Test/SASPlanetTests.dproj
@@ -78,5 +78,6 @@
     </DelphiCompile>
     <DCCReference Include="..\u_EnumDoublePointClosePoly_Test.pas" />
     <DCCReference Include="..\u_EnumDoublePointFilterEqual_Test.pas" />
+    <DCCReference Include="..\u_EnumDoublePointWithClip_Test.pas" />
   </ItemGroup>
 </Project>
