--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -563,6 +563,7 @@
     <DCCReference Include="u_GeoCoderByGoogle.pas" />
     <DCCReference Include="u_GeoCoderByNavitel.pas" />
     <DCCReference Include="u_GeoCoderByRosreestr.pas" />
+    <DCCReference Include="u_GeoCoderByURL.pas" />
     <DCCReference Include="u_GeoCoderByWikimapia.pas" />
     <DCCReference Include="u_GeoCoderByYandex.pas" />
     <DCCReference Include="u_GeoCodeResult.pas" />
